Se ajusta la data dinammica por card/cuenta
Se ajusta la comunicacion entre componentes para mostrar la información de cada cuenta

Se muestra toda la informacion en pantalla, que proviene del archivo de datos

Cada elemento del card se muestra de manera dinamica

Se ajustan los servicios con funciones reutilizables

se ajustan aspectos responsive

se implementa en el proyecto jquery, fontawesome via npm

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -11,7 +11,7 @@
               En productos de {{t.type}} tienes:
             </div>
             <div class="info__value t-blue t-bigger">
-              <b>$ {{t.total}}{{t.currencyCode}}</b>
+              <b>$ {{t.total}}</b>
             </div>
           </div>
         </div>
