--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,68 +1,89 @@
 <div class="myCard">
   <div class="myCard__head">
-    <i class="fas fa-piggy-bank fa-2x myIcon"></i>
-    <a href="#" class="myLink" data-toggle="modal" data-target="#exampleModal">Ver detalle</a>
+    <div *ngIf="productType === 'DEPOSIT_ACCOUNT'">
+      <i class="fas fa-piggy-bank fa-2x myIcon"></i>
+    </div>
+    <div *ngIf="productType === 'CREDIT'">
+      <i class="fas fa-money-check-alt fa-2x myIcon"></i>
+    </div>
+    <div *ngIf="productType === 'CREDIT_CARD'">
+      <i class="fas fa-credit-card fa-2x myIcon"></i>
+    </div>
+    <div *ngIf="productType === 'CERTIFIED_DEPOSIT_TERM'">
+      <i class="fas fa-file-contract fa-2x myIcon"></i>
+    </div>
+    <div *ngIf="productType === 'CURRENT_ACCOUNT'">
+      <i class="fas fa-wallet fa-2x myIcon"></i>
+    </div>
+    <a href="" class="myLink" data-toggle="modal" (click)="emitModal()">Ver detalle</a>
   </div>
   <div class="myCard__body">
     <div class="myCard__title">
       <div class="t-bigger t-dark">
-        <b>Cuenta de ahorros</b>
+        <b>{{productType}}</b>
       </div>
       <div class="t-small t-light">
-        Nro. 1271928731
+        Nro. {{accountId}}
       </div>
     </div>
     <div class="myCard__description">
       <div class="t-normal t-light">
-        Saldo disponible:
+        {{labelDescription}}
       </div>
       <div class="t-xnormal t-dark">
-        <b>$5'352.000,00</b>
+        <b>{{valueDescription}}</b>
       </div>
     </div>
   </div>
-  <div class="myCard__details--column">
+  <div class="myCard__details--column" *ngIf="showColumn">
     <div class="details-content">
       <div class="t-small t-light">
-        Plazo:
+        {{labelDetailC1}}
       </div>
       <div class="t-small t-dark">
-        <b>90 días</b>
+        <b>{{valueDetailC1}}</b>
       </div>
     </div>
     <div class="details-content">
       <div class="t-small t-light">
-        Fecha de vencimiento:
+        {{labelDetailC2}}
       </div>
       <div class="t-small t-dark">
-        <b>28/Jun/2019</b>
+        <b>{{valueDetailC2}}</b>
       </div>
     </div>
   </div>
-  <div class="myCard__details--row">
+  <div class="myCard__details--row" *ngIf="showRow">
     <div>
       <div class="t-small t-light">
-        En bolsillos:
+        {{labelDetailR1}}
       </div>
       <div class="t-normal t-dark">
-        <b>$2'000.000,00</b>
+        <b>{{valueDetailR1}}</b>
       </div>
     </div>
     <div>
       <div class="t-small t-light">
-        Saldo total:
+        {{labelDetailR2}}
       </div>
       <div class="t-normal t-dark">
-        <b>$7’351.000,00</b>
+        <b>{{valueDetailR2}}</b>
       </div>
     </div>
   </div>
   <div class="myCard__foot">
-    <button type="button" class="myButton__primary">Pagar</button>
-    <div class="progress" style="height: 15px;">
-      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-         75%
+    <button *ngIf="showButton" type="button" class="myButton__primary">Pagar</button>
+    <div *ngIf="showProgress" class="foot_progress">
+      <div class="progress__label t-light">
+        {{labelProgress }}
+      </div>
+      <div class="progress" style="height: 15px;">
+        <div class="progress-bar" role="progressbar" [ngStyle]="{'width':valueProgress+'%'}" style="width: 75%">
+           {{valueProgress | number:'.0-1'}}%
+        </div>
       </div>
     </div>
   </div>
 </div>
+
+
