--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -20,7 +20,7 @@
   <div class="myCard__body">
     <div class="myCard__title">
       <div class="t-bigger t-dark">
-        <b>{{productType}}</b>
+        <b>{{'typeAccount.' + productType | translate}}</b>
       </div>
       <div class="t-small t-light">
         Nro. {{accountId}}
