--- a/src/app/components/pages/productos/productos.component.html
+++ b/src/app/components/pages/productos/productos.component.html
@@ -70,18 +70,18 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="{{dataModal.idModal}}" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="{{dataModal['idModal']}}" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-dialog-scrollable" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Información de cuenta: <b>{{dataModal.idModal}}</b></h5>
+        <h5 class="modal-title">Información de cuenta: <b>{{dataModal['idModal']}}</b></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         <pre>
-          {{dataModal.account|json}}
+          {{dataModal['account']|json}}
         </pre>
       </div>
       <div class="modal-footer">
